# llvm-project

clang/lib/Driver/ToolChains/: WebAssembly.cpp
clang/lib/Frontend/: CompilerInvocation.cpp
openmp/libomptarget/: CMakeLists.txt
openmp/libomptarget/plugins/: CMakeLists.txt
openmp/libomptarget/plugins/wasm32/: CMakeLists.txt
openmp/libomptarget/plugins/wasm32/src/: rtl.cpp
openmp/libomptarget/src/: rtl.cpp
openmp/runtime/: CMakeLists.txt
openmp/runtime/src/: CMakeLists.txt  kmp.h  kmp_alloc.cpp  kmp_runtime.cpp
